@@ -78,6 +78,10 @@ application {
     applicationDefaultJvmArgs << '--add-opens'
     applicationDefaultJvmArgs << 'javafx.graphics/com.sun.javafx.css=ALL-UNNAMED'
 
+    // Necessary when using ./gradlew run to support project metadata autocomplete
+    // See https://github.com/controlsfx/controlsfx/issues/1505
+    applicationDefaultJvmArgs << '--add-opens'
+    applicationDefaultJvmArgs << 'javafx.base/com.sun.javafx.event=ALL-UNNAMED'
 }
 
 /**
